--- a/index.html
+++ b/index.html
@@ -34,25 +34,24 @@
       </div>
       <div class="content">
         <aside class="datos-interes">
-            <div class="sobre-mi cajas">sobre-mi
-              <div class="descripcion">Soy una persona muy trabajador. La presion me puede en ciertas ocasiones, que le vamos ha hacer somos seres humanos.
-                Soy empatico, me desarrollo muy bien en los problemas de la gente :D; asique con mi consejos a los compis les quito estres y pueden currar ellos. Jugada Maestra.
+            <div class="sobre-mi cajas">Sobre-mi
+              <div class="descripcion">Soy una persona muy trabajadora, dinámica, con ganas de aprender esto que para mi es totalmente nuevo, con ganas de trabajar en grupo y aportar mi gramito de arena.
               </div>
             </div>
             <div class="skills cajas">Skills
               <div class="idiomas">Nivel de idiomas</div>
-                <div class="espaniol, tip-letra">Espaniol: Nativo</div>
+                <div class="espaniol, tip-letra">Español: Nativo</div>
                 <div class="Ingles, tip-letra">Ingles: Medio-Bajo</div>
                 <div class="rumano, tip-letra">Rumano: Nativo</div>
               
               <div class="code">Nivel de Habilidad en Code</div>
-                <div class="Html, tip-letra">HTML: Bajo</div>
-                <div class="CSS, tip-letra">CSS: Mas Bajo</div>
-                <div class="JS, tip-letra">Js: Casi Nulo</div>
+                <div class="Html, tip-letra">HTML: Aprendiz-Bajo</div>
+                <div class="CSS, tip-letra">CSS: Aprendiz-Bajo</div>
+                <div class="JS, tip-letra">Js: Aprendiz-Bajo</div>
               </div>
             <div class="otros-datos cajas hide">Otros datos</div>
             <div class="descargas" >
-                <a href="/index.html" download="Mi-CV" >
+                <a href="/Curriculum1.png" download="Mi-CV" >
                   <img src="/descarga.jpg" alt="" >
                 </a>
             </div>
